#ifndef STUDENTS_SUBJECT_H
#define STUDENTS_SUBJECT_H

#include <string>
#include <vector>

using namespace std;

struct Subject {
    string name;
    vector<int> marks;
};

#endif //STUDENTS_SUBJECT_H
